# FolderProjectManager

./: BUILDING.md  CMakeLists.txt  FolderProjectManager.json.in  LICENSE  README.md  filesselectionwizardpage.cpp  filesselectionwizardpage.h  folderbuildconfiguration.cpp  folderproject.cpp  folderproject.h  folderprojectconstants.h  folderprojectfileseditor.cpp  folderprojectfileseditor.h  folderprojectmanager.qbs  folderprojectmanager.qrc  folderprojectplugin.cpp  folderprojectplugin.h  folderprojectsettings.cpp  folderprojectsettings.h  folderprojectwizard.cpp  folderprojectwizard.h  recursivefoldermonitor.cpp  recursivefoldermonitor.h
.github/workflows/: build_cmake.yml
src/: asyncfoldermonitor.cpp  asyncfoldermonitor.h  asyncfoldermonitorworker.cpp  asyncfoldermonitorworker.h  folderbuildconfiguration.cpp  folderbuildconfiguration.h  foldermakestep.cpp  foldermakestep.h  folderproject.cpp  folderproject.h  folderprojectconstants.h  folderprojectfileseditor.cpp  folderprojectfileseditor.h  folderprojectplugin.cpp  folderprojectplugin.h  folderprojectsettings.cpp  folderprojectsettings.h  folderprojectwizard.cpp  folderprojectwizard.h  recursivefoldermonitor.cpp  recursivefoldermonitor.h
